fix: make scrollbar thinner for story dialog

--- a/src/sections/story/StoryDialog.css
+++ b/src/sections/story/StoryDialog.css
@@ -25,7 +25,7 @@
 }
 
 .story__dialog::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
   background-color: var(--colors-light-brown);
 }
 
